--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 button {
-  @apply rounded-md bg-primary px-5 py-3 text-white outline outline-2 outline-offset-0 outline-primary transition hover:bg-primary-dark focus:outline-offset-2 lg:px-10 lg:py-4;
+  @apply rounded-md bg-primary px-5 py-3 text-white outline outline-2 outline-offset-0 outline-primary transition hover:bg-primary-dark focus:outline-offset-2 disabled:cursor-not-allowed disabled:bg-primary-light disabled:outline-primary-light lg:px-10 lg:py-4;
 }
 
 #nav-check:checked + #navbar {
